Improved timer tab complementation